%% PawPal class diagram (updated)
classDiagram

    %% Task represents a single activity
    class Task {
        +description: str
        +scheduled_time: time
        +frequency: str
        +completed: bool
        +mark_complete()
        +reschedule(new_time)
    }

    %% Pet stores details and its own tasks
    class Pet {
        +name: str
        +species: str
        +age: int
        +tasks: list<Task>
        +add_task(task: Task)
        +remove_task(task: Task)
        +get_tasks(): list<Task>
    }

    %% Owner manages multiple pets and exposes their tasks
    class Owner {
        +name: str
        +pets: list<Pet>
        +preferences: dict
        +add_pet(pet: Pet)
        +get_all_tasks(): list<Task>
    }

    %% Scheduler is the brain that organizes tasks across pets/owners
    class Scheduler {
        +owners: list<Owner>
        +retrieve_tasks(date): list<Task>
        +organize_tasks()
        +detect_conflicts(): list
        +assign_task_to_pet(task: Task, pet: Pet)
    }

    %% Relationships
    Owner "1" o-- "*" Pet : owns
    Pet "1" o-- "*" Task : has
    Scheduler "1" o-- "*" Owner : manages
    Scheduler ..> Task : organizes

